# aisdk

./: CMakeLists.txt  README.md  export_yolo.py  run_test.sh  seg_postproc.cc  version.h.in
cmake/: common.cmake  ffmpeg.cmake  opencv.cmake  qualcommon_qnn.cmake  qualcommon_snpe.cmake  spdlog.cmake
doc/: API说明.md  Tools说明.md  git说明.md  release说明.md  vscode远程调试工具.md  持续集成.md  测试说明.md  目录说明.md  编译说明.md
doc/qulcommon/: 环境搭建.md
doc/架构设计/: graph.md  性能分析工具架构.md  核心层设计.md  注册新硬件平台流程.md  注册新算法流程.md  注册机制.md
include/: error.h  logger.h  pipeline.h  result.h
include/algorithm/: algorithm.h
include/api/: api_audio.h  api_cv.h  api_multimodal.h  api_nlp.h
include/fibo/: device.h  error.h  license.h  logger.h  processor.h  result.h  version.h
include/fibo/api/: api_audio.h  api_cv.h  api_multimodal.h  api_nlp.h
include/fibo/model/: model_audio.h  model_cv.h
include/model/: model_cv.h  model_nlp.h
include/nlohmann/: json.hpp
sample/: CMakeLists.txt  sample_api_cv.cpp
sample/command_parser/: command_parser.h
src/: CMakeLists.txt
src/api/: CMakeLists.txt  api_audio.cc  api_audio.cpp  api_cv.cc  api_cv.cpp  api_multimodal.cc  api_multimodal.cpp  api_nlp.cc  api_nlp.cpp
src/app/: CMakeLists.txt
src/common/: CMakeLists.txt  error.cc  log.h  logger.cc  tensor_util.cc  tensor_util.h
src/core/: CMakeLists.txt  device.cc  log.h  pipeline.cc  pipeline.cpp  processor.cc  processor.cpp  profile.h  registry.cc  registry.h  utils.h
src/core/graph/: graph.cc  graph.h
src/core/mem/: mem.cc  mem.h  mem_pool.cc  mem_pool.h
src/core/model/: model.cc  model.h
src/core/node/: node.cc  node.h
src/core/tensor/: meta_data.h  tensor.cc  tensor.cpp  tensor.h  tensor_pic.h
src/core/util/: any.h  timer.h
src/jni/: CMakeLists.txt  cv_api_jni.cc
src/registry/: CMakeLists.txt
src/registry/algorithm/: cv_classify_resnet_postproc.cpp  cv_classify_resnet_postproc.h  cv_classify_resnet_preproc.cc  cv_classify_resnet_preproc.cpp  cv_classify_resnet_preproc.h  cv_detection_yolo_postproc.cc  cv_detection_yolo_postproc.cpp  cv_detection_yolo_postproc.h  cv_detection_yolo_preproc.cc  cv_detection_yolo_preproc.cpp  cv_detection_yolo_preproc.h  cv_segmentation_yolo_postproc.cc  cv_segmentation_yolo_postproc.h  cv_segmentation_yolo_preproc.cc  cv_segmentation_yolo_preproc.h  nlp_llama.h  nlp_llama_preproc.h  yolo.h
src/registry/algorithm/infer_node/: nlp_infer_node.h
src/registry/algorithm/postproc_node/: cv_classify_resnet_postproc.cc  cv_classify_resnet_postproc.h  cv_detection_yolo_postproc.cc  cv_detection_yolo_postproc.h  cv_segmentation_yolo_postproc.cc  cv_segmentation_yolo_postproc.h
src/registry/algorithm/postproc_node/utils/: postproc_opencv.cc  postproc_opencv.h  utils_opencv.cc  utils_opencv.h
src/registry/algorithm/preproc_node/: cv_classify_resnet_preproc.cc  cv_classify_resnet_preproc.h  cv_detection_yolo_preproc.cc  cv_detection_yolo_preproc.h  cv_segmentation_yolo_preproc.cc  cv_segmentation_yolo_preproc.h  nlp_llama_preproc.cc  nlp_llama_preproc.h
src/registry/algorithm/preproc_node/tokenizer/: tiktoken.cc  tiktoken.h
src/registry/algorithm/preproc_node/utils/: preproc_opencv.cc  preproc_opencv.h
src/registry/algorithm/tokenizer/: base64.h
src/registry/algorithm/utils/: postproc_opencv.cc  postproc_opencv.h  preproc_opencv.cc  utils_opencv.cc  utils_opencv.h
src/registry/devices/cpu/: cpu_mem.cc  cpu_mem.h  onnx_infer.h  onnx_model.h
src/registry/devices/qualcomm/: qualcomm_device.cpp  qualcomm_device.h
src/registry/devices/qualcomm/qnn/: qnn_infer.cc  qnn_infer.h  qnn_mem.cpp  qnn_mem.h  qnn_model.cc  qnn_model.h
src/registry/devices/qualcomm/snpe/: snpe_infer.cc  snpe_infer.h  snpe_mem.cc  snpe_mem.cpp  snpe_mem.h  snpe_model.cc  snpe_model.cpp  snpe_model.h  snpe_postproc.cpp  snpe_postproc.h  snpe_preproc.cpp  snpe_preproc.h  snpe_utils.cpp  snpe_utils.h
src/registry/devices/qualcomm/snpe/utils/: CreateUserBuffer.cpp  createUser_buffer.cc
test/: CMakeLists.txt
test/registry/: det_input.raw  outputs_1.raw  seg_input_1.raw  test_cv.cpp  test_hello.cc  test_qnn_runtime.cc  test_qnn_runtime.cpp  test_snpe_runtime.cc  test_yolo.cc  test_yolo_det.cc  test_yolo_system.cc  yolov8_det.json
test/registry/command_parser/: command_parser.cpp  command_parser.h
test/registry/qnn/: qnn_util.cc  qnn_util.cpp  qnn_util.hpp  test_qnn_runtime_multimodel.cc  test_qnn_runtime_multimodel.cpp
toolchains/: android_ndk.cmake  ubuntu_gcc.cmake  x86_clang.cmake
